src/objects/Sales_Order_c_x__x.object
<CustomObject>
    <externalDataSource>ALU_Data_Source_New</externalDataSource>
    <externalName>Sales_Order_c__x</externalName>
    <fields>
        <fullName>ALU_Order_Number_c_c__c</fullName>
        <externalDeveloperName>ALU_Order_Number_c__c</externalDeveloperName>
        <label>ALU Order Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_c_c__c</fullName>
        <externalDeveloperName>Account_c__c</externalDeveloperName>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_CQ_Number_c_c__c</fullName>
        <externalDeveloperName>Actual_CQ_Number_c__c</externalDeveloperName>
        <label>Actual CQ Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Number_c_c__c</fullName>
        <externalDeveloperName>CQ_Number_c__c</externalDeveloperName>
        <label>CQ Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracted_Quote_Name_c__c</fullName>
        <externalDeveloperName>Contracted_Quote_Name__c</externalDeveloperName>
        <label>Contracted Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Quote_c_c__c</fullName>
        <externalDeveloperName>Contracted_Quote_c__c</externalDeveloperName>
        <label>Contracted Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_c__c</fullName>
        <externalDeveloperName>CreatedById__c</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Offer_Number_Text_c_c__c</fullName>
        <externalDeveloperName>Customer_Offer_Number_Text_c__c</externalDeveloperName>
        <label>Customer Offer Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Offer_Number_c_c__c</fullName>
        <externalDeveloperName>Customer_Offer_Number_c__c</externalDeveloperName>
        <label>Customer Offer Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_PO_c_c__c</fullName>
        <externalDeveloperName>Customer_PO_c__c</externalDeveloperName>
        <label>Customer PO Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted__c</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_c__c</fullName>
        <externalDeveloperName>LastModifiedById__c</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_c__c</fullName>
        <externalDeveloperName>LastModifiedDate__c</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate_c__c</fullName>
        <externalDeveloperName>LastReferencedDate__c</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate_c__c</fullName>
        <externalDeveloperName>LastViewedDate__c</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name_c__c</fullName>
        <externalDeveloperName>Name__c</externalDeveloperName>
        <label>SO Number</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Number_c_c__c</fullName>
        <externalDeveloperName>Network_Number_c__c</externalDeveloperName>
        <label>Network Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name_c_c__c</fullName>
        <externalDeveloperName>Offer_Name_c__c</externalDeveloperName>
        <label>Offer Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_c_c__c</fullName>
        <externalDeveloperName>Offer_c__c</externalDeveloperName>
        <label>Offer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_c_c__c</fullName>
        <externalDeveloperName>Opportunity_Name_c__c</externalDeveloperName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reference_Number_c_c__c</fullName>
        <externalDeveloperName>Opportunity_Reference_Number_c__c</externalDeveloperName>
        <label>Opportunity Reference Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_c_c__c</fullName>
        <externalDeveloperName>Opportunity_c__c</externalDeveloperName>
        <label>Opportunity</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Created_c_c__c</fullName>
        <externalDeveloperName>Order_Created_c__c</externalDeveloperName>
        <label>Order Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Received_c_c__c</fullName>
        <externalDeveloperName>Order_Received_c__c</externalDeveloperName>
        <label>Order Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_c_c__c</fullName>
        <externalDeveloperName>Order_c__c</externalDeveloperName>
        <label>Order #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Amount_EUR_c_c__c</fullName>
        <externalDeveloperName>PO_Amount_EUR_c__c</externalDeveloperName>
        <label>PO Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Amount_USD_c_c__c</fullName>
        <externalDeveloperName>PO_Amount_USD_c__c</externalDeveloperName>
        <label>PO Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Amount_Value_c_c__c</fullName>
        <externalDeveloperName>PO_Amount_Value_c__c</externalDeveloperName>
        <label>PO Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Amount_c_c__c</fullName>
        <externalDeveloperName>PO_Amount_c__c</externalDeveloperName>
        <label>PO Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number_c_c__c</fullName>
        <externalDeveloperName>Project_Number_c__c</externalDeveloperName>
        <label>Project Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Task_c_c__c</fullName>
        <externalDeveloperName>SO_Task_c__c</externalDeveloperName>
        <label>SO Task</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp_c__c</fullName>
        <externalDeveloperName>SystemModstamp__c</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <label>Sales Order</label>
    <pluralLabel>Sales Orders</pluralLabel>
</CustomObject>